# thingsboard-gateway

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  DALI2_CONNECTOR_README.md  MANIFEST.in  README.md  TestGateway.py  build.gradle  build_docker.sh  build_latest_docker.sh  docker-build-multiarch.sh  docker_build_multiarch.sh  generate_deb_package.sh  make_packages.sh  pom.xml  python3-thingsboard-gateway.deb  python3-thingsboard-gateway.rpm  requirements-full.txt  requirements.txt  send_to_unipi.sh  setup.cfg  setup.py  tb-ble.py  tb_ble.py  tb_ble_extension.py  tb_device_mqtt.py  tb_device_storage.py  tb_event_storage.py  tb_extension_ble.py  tb_extension_modbus.py  tb_gateway.py  tb_gateway_mqtt.py  tb_modbus_extension.py  tb_modbus_init.py  tb_modbus_server.py  tb_modbus_transport_manager.py  tb_utility.py  test.sh  tests.py  (+5 more)
.github/: labeler.yml  release.yml  release_bugfixes.yml
ble/: tb_ble_extension.py
config/: BLEConfig.json  GatewayConfig.json  MQTT.json  MQTTConfig.json  ModbusConfig.json  TB_gateway.json  grpc_connector_1.json  logs.conf  modbus.json  mqtt.json  opcua.json  socket.json  tb_gateway.json  tb_gateway.yaml  tcpserver.json
connectors/: connector.py
debug_utils/: unipi.sh
docker/: Dockerfile  Dockerfile.offline  Makefile  docker-compose.yml  python3-thingsboard-gateway.deb  run-application.sh  start-gateway.sh
docs/: conf.py  index.rst
examples/: GatewayConfig.json  MQTTConfig.json  TestGateway.py  ble-config.json  gateway_config.json  modbus-config.json  read_coils.py  read_from_device.py  storage_init.py  storage_read.py  (+2 more)
(+1216 files in other folders)
