[metadata]
name = thingsboard-gateway
version = 2.0.13
description = Thingsboard Gateway for IoT devices.
long_description = The Thingsboard IoT Gateway is an open-source solution that allows you to integrate devices connected to legacy and third-party systems with Thingsboard.
license = Apache Software License (Apache Software License 2.0)
url = https://github.com/thingsboard/thingsboard-gateway
author = ThingsBoard
author_email = info@thingsboard.io

[options]
include_package_data = True
python_requires = >=3.4

[options.package_data]
* = config/*
