[metadata]
name = thingsboard-gateway
version = 2.0.0.7
description = Thingsboard Gateway for IoT devices.
long_description= file: README.md
license = Apache Software License (Apache Software License 2.0)
url = https://github.com/thingsboard/thingsboard-gateway
author = ThingsBoard
author_email = info@thingsboard.io

[options]
include_package_data = True
python_requires = >=3.5

[options.package_data]
* = config/*
